--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
 
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css' />
-    <link href="~/Content/css/libs/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    @Styles.Render("~/Content/bootstrap")
-    @Styles.Render("~/Content/stylesheet")
+    
+    <link href="/Content/css/libs/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/Content/css/libs/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/Content/css/libs/pe-icon-7-stroke.css" rel="stylesheet" type="text/css">
+    <link href="/Content/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" type="text/css">
+    <link href="/Content/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css">
+    <link href="/Content/css/libs/animate.css" rel="stylesheet" type="text/css">
+    <link href="/Content/css/custom.css" rel="stylesheet" type="text/css">
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -130,9 +135,14 @@
             </div>
         </div>
     </section>
-    <script src="~/scripts/jquery-1.12.4.min.js"></script>
-    <script src="~/scripts/bootstrap.min.js"></script>
-    @Scripts.Render("~/bundles/other")
+    <script src="/Scripts/libs/jquery-1.11.1.min.js"></script>
+<script src="/Scripts/libs/bootstrap.min.js"></script>
+
+<script src="/Content/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
+<script src="/Content/owl-carousel/owl.carousel.min.js"></script>
+<script src="/Scripts/plugins/jquery.form.js"></script>
+<script src="/Scripts/plugins/plugins.js"></script>
+        <script src="/Scripts/init.js"></script>
 
 </body>
 </html>
