--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css' />
     
-    <link href="/Content/css/libs/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/Content/css/libs/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="/Content/css/libs/pe-icon-7-stroke.css" rel="stylesheet" type="text/css">
     <link href="/Content/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" type="text/css">
