--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="0; URL=https://absolute90s.dk">
+    <link rel="canonical" href="https://absolute90s.dk">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Language" content="da" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui" />
